--- a/app/app.html
+++ b/app/app.html
@@ -17,11 +17,7 @@
       <button menuClose ion-item >
         <ion-icon item-left name="cart"></ion-icon>
         Shop Rates
-      </button>
-      <button menuClose ion-item>
-        <ion-icon item-left name="calculator"></ion-icon>
-        Mortgage Calculator
-      </button>      
+      </button><button menuClose ion-item>  <ion-icon item-left name="calculator"></ion-icon> Mortgage Calculator</button>      
       <ion-list-header>Account</ion-list-header>
       <button menuClose ion-item >
         <ion-icon item-left name="person"></ion-icon>
@@ -35,5 +31,4 @@
   </ion-content>
 
 </ion-menu>
-
 <ion-nav id="nav" [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
